# api/v2/routes/api.php
@@ -1,4 +1,7 @@
 <?php
+require_once __DIR__ . '/../controllers/GeneralController.php';
+require_once __DIR__ . '/../controllers/VocabController.php';
+require_once __DIR__ . '/../controllers/ValidationController.php';
 return [
     ['GET', '/general/alive', [new GeneralController(), 'getAlive']],
     ['GET', '/update/vocabs/msl/labs', [new VocabController(), 'updateMslLabs']],
@@ -6,5 +9,6 @@ return [
     ['GET', '/update/timezones', [new VocabController(), 'updateTimezones']],
     ['GET', '/vocabs/sciencekeywords', [new VocabController(), 'getGcmdScienceKeywords']],
     ['GET', '/vocabs/roles[/{type}]', [new VocabController(), 'getRoles']],
+    ['GET', '/validation/patterns[/{type}]', [new ValidationController(), 'getPattern']],
     // TODO: Weitere Endpunkte ergänzen
 ];
